--- a/tpvics_shrc/packages.config
+++ b/tpvics_shrc/packages.config
@@ -7,10 +7,10 @@
   <package id="System.Data.SQLite.Core" version="1.0.114.2" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.114.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.114.0" targetFramework="net472" />
-  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" requireReinstallation="true" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" requireReinstallation="true" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" requireReinstallation="true" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
