--- a/tpvics_shrc/App.config
+++ b/tpvics_shrc/App.config
@@ -4,6 +4,14 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
+  <appSettings>
+    <add key="cnStr" value="Data Source=tpvics_shrc.db3" />
+    <add key="dbver" value="2" />
+    <add key="cnStr1" value="Data Source=D:\Win_Form_GB\Win_Form_GB\bin\Debug\GBData.sdf;Password=admin.123" />
+    <add key="usrNme" value="" />
+    <add key="usrPwd" value="" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
